# SpriteFontPlus

./: README.md
SpriteFontPlus/: Bounds.cs  CharacterRange.cs  Directory.Build.props  DynamicSpriteFont.cs  Font.cs  FontAtlas.cs  FontAtlasNode.cs  FontGlyph.cs  FontGlyphSquad.cs  FontSystem.cs  IOUtils.cs  Int32Map.cs  SpriteBatchExtensions.cs  SpriteFontPlus.Fna.Core.csproj  SpriteFontPlus.csproj  SpriteFontPlus.sln  app.config
SpriteFontPlus.Native/: SpriteFontPlus.Native.vcxproj.filters  StbTrueType.cpp
SpriteFontPlus/Properties/: AssemblyInfo.cs
StbTrueType/: CMakeLists.txt  StbTrueType.vcxproj
StbTrueType/visualc-winrt/: StbTrueType.sln  StbTrueType.vcxproj
src/SpriteFontPlus/: SpriteFontPlus.sln
src/SpriteFontPlus.Native/: Shared.hpp  SpriteFontPlus.Native.vcxproj
src/SpriteFontPlus/FontStashSharp/: FontGlyph.cs
